--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <include layout="@layout/snippet_toolbar_inner"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <include layout="@layout/snippet_toolbar_inner" />
 
         <im.delight.android.webview.AdvancedWebView
             android:id="@+id/advWebView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></im.delight.android.webview.AdvancedWebView>
+            android:layout_height="match_parent"/>
     </LinearLayout>
 
 
     <ProgressBar
-        android:layout_centerInParent="true"
         android:id="@+id/progressBar"
         android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerInParent="true"
         android:indeterminate="true"
-        android:indeterminateTintMode="src_atop"
         android:indeterminateTint="@color/colorPrimary"
-        android:layout_height="50dp"/>
+        android:indeterminateTintMode="src_atop" />
 </RelativeLayout>
