--- a/app/src/main/res/layout/snippet_toolbar_inner.xml
+++ b/app/src/main/res/layout/snippet_toolbar_inner.xml
@@ -1,56 +1,55 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        >
+        android:background="@color/white">
 
         <androidx.appcompat.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/profileToolBar"
-            >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <ImageView
+                    android:id="@+id/backArrow"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentLeft="true"
-                    android:id="@+id/backArrow"
-                    android:visibility="visible"
+                    android:layout_centerVertical="true"
                     android:padding="10dp"
-                    android:src="@drawable/ic_back"/>
+                    android:src="@drawable/ic_back"
+                    android:visibility="visible" />
 
                 <View
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:focusable="true"
-                    android:focusableInTouchMode="true"><requestFocus/></View>
+                    android:focusableInTouchMode="true">
+
+                    <requestFocus />
+                </View>
+
                 <TextView
-                    android:layout_toRightOf="@+id/backArrow"
-                    android:fontFamily="@font/quicksand_bold"
-                    android:layout_marginLeft="5dp"
+                    android:id="@+id/toolbarTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:id="@+id/toolbarTitle"
-                    android:textColor="@color/black"
+                    android:layout_marginLeft="5dp"
+                    android:layout_toRightOf="@+id/backArrow"
+                    android:fontFamily="@font/quicksand_bold"
                     android:text=""
-                    android:textSize="16sp"
-                    />
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
 
 
             </RelativeLayout>
 
 
         </androidx.appcompat.widget.Toolbar>
-
 
 
     </com.google.android.material.appbar.AppBarLayout>
