--- a/app/src/main/res/layout/layout_nativead_big.xml
+++ b/app/src/main/res/layout/layout_nativead_big.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -20,7 +20,7 @@
             android:layout_gravity="left"
             android:textColor="#FFFFFF"
             android:textSize="12sp"
-            android:text="Ad"
+            android:text="@string/ad"
             android:background="#FFCC66"
             android:width="15dp"
             android:height="15dp"/>
