--- a/app/src/main/res/layout/layout_nativead_small.xml
+++ b/app/src/main/res/layout/layout_nativead_small.xml
@@ -4,34 +4,34 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:paddingBottom="10dp"
         android:background="#FFFFFF"
         android:minHeight="50dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="10dp">
 
         <TextView
             android:id="@+id/ad_attribution"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:textColor="#FFFFFF"
-            android:textSize="12sp"
-            android:text="Ad"
-            android:background="#FFCC66"
+            android:layout_gravity="start"
             android:width="15dp"
-            android:height="15dp"/>
+            android:height="15dp"
+            android:background="#FFCC66"
+            android:text="@string/ad"
+            android:textColor="#FFFFFF"
+            android:textSize="12sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="3dp">
+            android:paddingTop="3dp"
+            android:paddingRight="20dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -43,23 +43,23 @@
                     android:layout_width="65dp"
                     android:layout_height="65dp"
                     android:adjustViewBounds="true"
-                    android:paddingBottom="5dp"
+                    android:paddingEnd="5dp"
                     android:paddingRight="5dp"
-                    android:paddingEnd="5dp"/>
+                    android:paddingBottom="5dp" />
 
                 <LinearLayout
-                    android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/ad_headline"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="#909090"
                         android:layout_marginLeft="6dp"
                         android:layout_marginRight="6dp"
+                        android:textColor="#909090"
                         android:textSize="13sp"
                         android:textStyle="bold" />
 
@@ -67,16 +67,17 @@
                         android:id="@+id/ad_body"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="10dp"
                         android:layout_marginLeft="6dp"
-                        android:maxLines="2"
+                        android:layout_marginRight="10dp"
                         android:ellipsize="end"
+                        android:maxLines="2"
                         android:textSize="9sp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_marginLeft="6dp"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="6dp">
+
                         <TextView
                             android:id="@+id/ad_price"
                             android:layout_width="wrap_content"
@@ -91,37 +92,40 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="6dp"
                             android:isIndicator="true"
-                            android:theme="@style/RatingBar"
                             android:numStars="5"
-                            android:stepSize="0.5" />
+                            android:stepSize="0.5"
+                            android:theme="@style/RatingBar" />
                     </LinearLayout>
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:gravity="center_vertical"
                     android:orientation="vertical">
+
                     <Button
-                        android:background="@color/colorPrimary"
-                        android:textColor="@color/white"
                         android:id="@+id/ad_call_to_action"
-                        android:paddingLeft="25dp"
-                        android:paddingRight="25dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:background="@color/colorPrimary"
                         android:gravity="center"
+                        android:paddingLeft="25dp"
+                        android:paddingRight="25dp"
+                        android:textColor="@color/white"
                         android:textSize="12sp" />
+
                     <ImageView
                         android:id="@+id/playAttribution"
                         android:layout_width="60dp"
-                        android:visibility="gone"
-                        android:layout_marginTop="5dp"
                         android:layout_height="15dp"
-                        android:scaleType="fitCenter"
                         android:layout_gravity="center_horizontal"
-                        android:src="@drawable/playlogo"/>
+                        android:layout_marginTop="5dp"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/playlogo"
+                        android:visibility="gone" />
                 </LinearLayout>
 
 
